--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul>
-          <li><a href="{{ '/about' | prepend: site.baseurl }}">使用说明</a></li>
-          <li><a href="{{ site.baseurl }}/">文档列表</a></li>
+          <li><a href="{{ '/about' | prepend: site.baseurl }}">About me</a></li>
         </ul>
       </div>
     </nav>
@@ -22,7 +21,7 @@
 
     <footer>
       <span>
-        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> docs.sanniuben.com. 
+        &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> resume.dominic.pro. 
       </span>
     </footer>
   </body>
