--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,5 +32,5 @@ layout: default
     <a href="{{ page.previous.url | prepend: site.baseurl }}" class="right arrow">&#8594;</a>
   {% endif %}
 
-  <a href="#" class="top">回到顶端</a>
+  <a href="#" class="top">Back to top</a>
 </div>
